[project]
name = "zoho-crm-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.10.1",
    "mysql-connector-python>=9.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "zcrmsdk>=3.1.0",
]

[project.scripts]
zoho-crm-mcp = "main:run"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]